# bristle

./: .gitignore  Dockerfile  README.md  apiconf.cabal  bristle.cabal  docker-compose.yml  example.mustache  example_partial.mustache
src/: Main.hs
src/Text/: Bristle.hs
src/Text/Bristle/: Context.hs  ContextGenerators.hs  Types.hs
test/: Test.hs
