name:                bristle
version:             0.1.0.0
synopsis:            Mustache templates
-- description:
license:             GPL-2
license-file:        LICENSE
author:              San Gillis
maintainer:          gillis.san@gmail.com
category:            Distribution
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:
    Text.Bristle
    Text.Bristle.Context
    Text.Bristle.Types
    Text.Bristle.ContextGenerators
  build-depends:
    base >=4.8 && <4.9,
    parsec >=3.1 && <3.2,
    text >=1.2 && <1.3,
    transformers >=0.4 && <0.5,
    HTTP >=4000 && <5000
  default-language:
    Haskell2010
  hs-source-dirs:
    src

test-suite test
    type: exitcode-stdio-1.0
    main-is:
        Test.hs
    hs-source-dirs:
        test, src
    build-depends:
        base,
        parsec,
        text,
        transformers,
        HTTP,
        HUnit,
        QuickCheck,
        test-framework,
        test-framework-hunit,
        test-framework-quickcheck2
